Fix layout collapse

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -88,7 +88,7 @@ footer{
 
 /*headerのpadding-topログイン後はもとに戻す*/
  .top-space{
- 	margin-top: 50px;
+ 	margin-top: 70px;
  }
 
 /* ページャー */
